WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
140284
Fix error handling of ContentExtensionsManager when the top level input is unusable
https://bugs.webkit.org/show_bug.cgi?id=140284
Summary
Fix error handling of ContentExtensionsManager when the top level input is un...
Benjamin Poulain
Reported
2015-01-08 21:13:39 PST
Fix error handling of ContentExtensionsManager when the top level input is unusable
Attachments
Patch
(4.69 KB, patch)
2015-01-08 21:16 PST
,
Benjamin Poulain
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Benjamin Poulain
Comment 1
2015-01-08 21:16:15 PST
Created
attachment 244323
[details]
Patch
Andreas Kling
Comment 2
2015-01-09 10:55:11 PST
Comment on
attachment 244323
[details]
Patch r=me
Benjamin Poulain
Comment 3
2015-01-09 13:57:01 PST
Comment on
attachment 244323
[details]
Patch Clearing flags on attachment: 244323 Committed
r178194
: <
http://trac.webkit.org/changeset/178194
>
Benjamin Poulain
Comment 4
2015-01-09 13:57:04 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug