Fix error handling of ContentExtensionsManager when the top level input is unusable https://bugs.webkit.org/show_bug.cgi?id=140284

Reviewed by Andreas Kling.

There are a couple of ways the WebProcess would crash if the input
is really really bad:
-If the JSON is unreadable, we can have an exception or decodedRules can be null.
-On any of the error, we cannot return immediately or we will skip vm.clear().

This patch adds a branch to fix the first issue.

For the second issue, a new function, loadEncodedRules(), encapsulate all the early
returns to make sure we execute the end of loadExtension().

* contentextensions/ContentExtensionsManager.cpp:
(WebCore::ContentExtensions::ExtensionsManager::loadEncodedRules):
(WebCore::ContentExtensions::ExtensionsManager::loadExtension):


Canonical link: https://commits.webkit.org/158281@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@178194 268f45cc-cd09-0410-ab3c-d52691b4dbfc